tests/exposure_test_same_unmatched_rule_in_ingress_egress/netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: same-rule-in-different-directions
  namespace: hello-world
spec:
  podSelector:
    matchLabels:
      app: a-app
  ingress:
  - from:
    - namespaceSelector:
           matchExpressions:
           - key: foo.com/managed-state
             operator: In
             values:
             - managed
    ports:
    - port: http
      protocol: TCP
  - from:
    - namespaceSelector: {}
    ports:
    - port: local-dns
      protocol: TCP
  egress:
  - to:
    - namespaceSelector:
           matchExpressions:
           - key: foo.com/managed-state
             operator: In
             values:
             - managed
    ports:
    - port: 8050
      protocol: TCP
